# mojo-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
docs/: project-context.md
plans/: 2026-04-09-mojo-check-proxy.md
plugins/mojo-lsp/: README.md
plugins/mojo-lsp/.claude-plugin/: plugin.json
scripts/: setup.sh
specs/: 2026-04-09-mojo-check-proxy.md
src/mojo_mcp/: diagnostics.py  docs.py  docs_backend.py  formatting.py  gotchas.py  gotchas.yaml  mojo_source.py  sandbox.py  server.py
tests/: conftest.py  test_axi.py  test_changelog.py  test_diagnostics_budget.py  test_diagnostics_group_order.py  test_diagnostics_origin.py  test_diagnostics_parse.py  test_diagnostics_props.py  test_diagnostics_suppression.py  test_docs_backend.py  test_docs_cache.py  test_enrichment.py  test_execute_path.py  test_formatting.py  test_gotchas.py  test_handwritten_tools.py  test_integration.py  test_mojo_cmd.py  test_mojo_source_extractor.py  test_sandbox_compaction.py  test_search_sandbox.py  test_stdlib_index.py  test_toolchain_resolution.py  test_validate.py
tests/fixtures/diagnostics/: golden_note_summary.ndjson  golden_two_notes.ndjson  golden_warning_only.ndjson
