[project]
name = "mojo-mcp"
version = "0.1.0"
description = "Mojo MCP Server using Code Mode pattern (search + execute)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.scripts]
mojo-mcp = "mojo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mojo_mcp"]
